# rls

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  COPYRIGHT  Cargo.toml  README.md  appveyor.yml  architecture.md  azure-pipelines.yml  build.rs  changelog.md  clients.md  contributing.md  debugging.md  goto_def.sh  ls.sh  rust-toolchain  rustfmt.toml
.dependabot/: config.yml
.github/workflows/: ci.yml
ci/: azure-install-rust.yml  azure-rustfmt.yml  azure-test.yml  setup-toolchain.sh
racer/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
racer/.github/workflows/: ci.yml
racer/fixtures/.cargo/: config
racer/fixtures/arst/: Cargo.toml
racer/fixtures/arst/src/submodule/: mod.rs
racer/interner/: Cargo.toml
racer/interner/src/: lib.rs
racer/metadata/: Cargo.toml
racer/metadata/src/: lib.rs  mapping.rs  metadata.rs
racer/src/racer/: ast.rs  ast_types.rs  benches.rs  codecleaner.rs  codeiter.rs  core.rs  fileres.rs  lib.rs  matchers.rs  metadata.rs  nameres.rs  primitive.rs  project_model.rs  scopes.rs  snippets.rs  testutils.rs  typeinf.rs  util.rs
rls/: Cargo.toml
rls-analysis/: Cargo.toml  README.md
rls-analysis/benches/: std_api_crate.rs
rls-analysis/examples/: print-crate-id.rs
rls-analysis/src/: analysis.rs  lib.rs  loader.rs  lowering.rs  raw.rs  symbol_query.rs  util.rs
rls-analysis/src/listings/: mod.rs
rls-analysis/src/test/: mod.rs
rls-analysis/test_data/: .ignore  make_data.sh
rls-analysis/test_data/exprs/: Cargo.toml
rls-analysis/test_data/exprs/save-analysis/: exprs.json
rls-analysis/test_data/exprs/src/: main.rs
rls-analysis/test_data/hello/: Cargo.toml
rls-analysis/test_data/hello/save-analysis/: hello.json
rls-analysis/test_data/hello/src/: main.rs
rls-analysis/test_data/rename/save-analysis/: rename.json
rls-analysis/test_data/rename/src/: main.rs
rls-analysis/test_data/rls-analysis/: libbyteorder.json  libcfg_if.json  libderive_new-bde12847971b287b.json  libderive_new.json  libeither.json  libfst.json  libitertools.json  libitoa.json  libjson.json  liblog-d22cd0932fa5c1b3.json  liblog.json  libproc_macro2.json  libquote-b3cf046a798c19b3.json  libquote.json  librls_analysis-b3dec921ecc459d1.json  librls_analysis-d50749ac6b175c47.json  librls_analysis.json  librls_data-b0b0e86828c2c73b.json  librls_data-fb652b43586148ed.json  librls_span-38da590cd9f4aa4f.json  librls_span.json  libryu.json  libsyn-e39deb67629c1e59.json  libunicode_xid-e5925768ebe85568.json  libunicode_xid.json
rls-analysis/test_data/rust-analysis/: liballoc-cb0c353c484e3c0b.json  liballoc-dd00ad303ae24b18.json  liballoc_jemalloc-67da9297e5607113.json  liballoc_system-efb53e76be37f014.json  libbacktrace_sys-c129970c5e23c3eb.json  libcompiler_builtins-7b1ce65653698a30.json  libcompiler_builtins-8aed34fb6416e6f8.json  libcore-0db93aa24a0ed80b.json  libcore-a5db6a3445116c08.json  liblibc-08bc34c3a07b089e.json  liblibc-de373e74dd2d52be.json  libpanic_abort-627bb601930ec2f6.json  libpanic_abort-bc692285f7fa669f.json  libpanic_unwind-1400fdc1e89071fe.json  libpanic_unwind-4da7cb5dd1fef0c2.json  libprofiler_builtins-50e7d4a810e2b7d4.json  librustc_asan-78879868ade8efee.json  librustc_asan-b2b370d757ab1d80.json  librustc_demangle-132fd86beaa57ca4.json  librustc_lsan-5fda8638db6a6948.json  librustc_msan-8492c3e570f2bd15.json  librustc_std_workspace_core-a48dbd3d0edd9076.json  librustc_tsan-7c3a091fdb6e944e.json  librustc_tsan-859a51be98ad349f.json  libstd-a01d99c92d4389f1.json  libstd-af9bacceee784405.json  libstd_unicode-919969778ffdc60a.json  libunwind-ca9eb5addb58e8fa.json  libunwind-e14db3aa6fb2de70.json
rls-analysis/test_data/types/: Cargo.toml
rls-analysis/test_data/types/save-analysis/: types-e743a203eefaed5b.json  types.json
rls-analysis/test_data/types/src/: main.rs
rls-blacklist/: .gitignore  Cargo.toml  README.md
rls-blacklist/src/: lib.rs
rls-data/: .gitignore  Cargo.toml  README.md
rls-data/src/: config.rs  lib.rs  serde.rs  serde_expanded.rs
rls-ipc/: Cargo.toml
rls-ipc/src/: client.rs  lib.rs  rpc.rs  server.rs
rls-rustc/: COPYRIGHT  Cargo.toml  README.md
rls-rustc/src/: clippy.rs  ipc.rs  lib.rs
rls-span/: Cargo.toml
rls-span/src/: compiler.rs  lib.rs  serde_expanded.rs
rls-vfs/: Cargo.toml
rls-vfs/benches/: bench.rs
rls-vfs/src/: lib.rs  test.rs
rls-vfs/src/ipc/: inprocess.rs  linux.rs  mod.rs  windows.rs
rls-vfs/src/ipc/linux/: error.rs  mod.rs
rls/src/: build.rs  cmd.rs  concurrency.rs  config.rs  lib.rs  lsp_data.rs  main.rs  project_model.rs  server.rs
sample_project/: Cargo.toml  rustw.toml
sample_project/src/: lib.rs  main.rs
sample_project_2/: Cargo.toml  build.sh  rustw.toml
sample_project_2/src/: main.rs
src/: actions.rs  actions_common.rs  actions_http.rs  actions_ls.rs  build.rs  cmd.rs  concurrency.rs  config.rs  custom_types.rs  ide.rs  lib.rs  log4rs.yaml  ls_server.rs  lsp_data.rs  lsproto.rs  main.rs  project_model.rs  server.rs  version.rs  vfs.rs
src/actions/: change_queue.rs  compiler_message_parsing.rs  diagnostics.rs  execute_command.rs  format.rs  hover.rs  lsp_extensions.rs  mod.rs  notifications.rs  post_build.rs  progress.rs  requests.rs  run.rs  work_pool.rs
src/server/: cmd.rs  dispatch.rs  io.rs  message.rs  mod.rs  test.rs
src/test/: harness.rs  lens.rs  mod.rs  types.rs  warnings.rs
test_data/: Cargo.toml
test_data/abs_path/: Cargo.toml
test_data/bin_lib_no_cfg_test/: Cargo.toml
test_data/compile_fail/: Cargo.toml
test_data/compiler_message/: clippy-identity-op.json  macro-expected-token.json  mismatched-types.json  unused-use.json
test_data/completion/: Cargo.toml
test_data/deglob/: Cargo.toml
test_data/diagnostics/: Cargo.toml
test_data/dodgy_cargo_toml/: Cargo.toml
test_data/hover/: Cargo.toml
test_data/infer_bin/: Cargo.toml
test_data/infer_custom_bin/: Cargo.toml
test_data/lens_run/: Cargo.toml
test_data/mismatched_types/: Cargo.toml
testls-client/: README.md  package.json
tests/: client.rs  find_all_refs.rs  lens.rs  tests.rs  tests_old.rs  tooltip.rs  translated.rs
(+259 files in other folders)
