[package]
name = "rls"
version = "1.41.0"
edition = "2018"
authors = ["Nick Cameron <ncameron@mozilla.com>", "The RLS developers"]
description = "Rust Language Server - provides information about Rust programs to IDEs and other tools"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]

build = "build.rs"

[lib]
name = "rls"
doctest = false
path = "rls/src/lib.rs"

[[bin]]
name = "rls"
test = false
path = "rls/src/main.rs"

[dependencies]
# FIXME: Release rls-analysis 0.18.2 to crates.io
rls-analysis = { version = "0.18.2", path = "rls-analysis" }
rls-data = "0.19"
# FIXME: Release rls-rustc 0.6.0 to crates.io
rls-rustc = { version = "0.6.0", path = "rls-rustc" }
rls-span = "0.5"
rls-vfs = "0.8"
rls-ipc = { version = "0.1.0", path = "rls-ipc", optional = true }

anyhow = "1.0.26"
cargo = { git = "https://github.com/rust-lang/cargo", rev = "1c034752de0df744fcd7788fcbca158830b8bf85" }
cargo-util = { git = "https://github.com/rust-lang/cargo", rev = "1c034752de0df744fcd7788fcbca158830b8bf85" }
cargo_metadata = "0.14"
clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", version = "0.1.60", optional = true }
env_logger = "0.9"
home = "0.5.1"
itertools = "0.10"
jsonrpc-core = "18"
lsp-types = { version = "0.60", features = ["proposed"] }
lazy_static = "1"
log = "0.4"
num_cpus = "1"
racer = { version = "2.2", default-features = false }
rand = "0.8"
rayon = "1"
rustc_tools_util = "0.2"
rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt", rev = "5056f4cfb311a084420f1828cd58af94d143f5e0" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
url = "2"
walkdir = "2"
regex = "1"
ordslice = "0.3"
crossbeam-channel = "0.5"
toml = "0.5"
toml_edit = { version = "0.13.1", features = ["easy"] }
heck = "0.3"

# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"

[dev-dependencies]
difference = "2"
tempfile = "3"
lsp-codec = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "time", "io-util", "process"] }
tokio-util = { version = "0.6", default-features = false, features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
rustc_tools_util = "0.2"

[features]
clippy = ["clippy_lints", "rls-rustc/clippy"]
ipc = ["rls-rustc/ipc", "rls-ipc/server"]
default = ["ipc"]
