[package]
name = "racer"
version = "2.2.2"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>", "The Racer developers"]
homepage = "https://github.com/racer-rust/racer"
repository = "https://github.com/racer-rust/racer"
edition = "2018"

[lib]
name = "racer"
path = "src/racer/lib.rs"

[dependencies]
bitflags = "1.0"
log = "0.4"
env_logger = "0.7.1"
lazy_static = "1.2"
humantime = "2.0.0"
derive_more = "0.99.2"
rls-span = "0.5.1"
lazycell = "1.2"

[dependencies.racer-cargo-metadata]
version = "0.1"
path = "metadata"

[features]
default = ["metadata"]
metadata = []

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
