[package]
name = "rls-analysis"
version = "0.17.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Library for processing rustc's save-analysis data for the RLS"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]
exclude = [
    "test_data/*",
]

[dependencies]
log = "0.4"
rls-data = "= 0.19"
rls-span = "0.5"
derive-new = "0.5"
fst = { version = "0.3", default-features = false }
itertools = "0.7.3"
json = "0.11.13"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
lazy_static = "1"
env_logger = "0.5"

[features]
default = []
derive = ["rls-data/derive", "rls-span/derive"]
