[package]
name = "rls-data"
version = "0.18.2"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Data structures used by the RLS and Rust compiler"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]

[dependencies]
rls-span = "0.4.1"
rustc-serialize = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["serialize-rustc"]
borrows=[]
serialize-rustc = ["rustc-serialize", "rls-span/serialize-rustc"]
serialize-serde = ["serde", "serde_derive", "rls-span/serialize-serde"]
