[package]
name = "rls-data"
version = "0.19.1"
edition = "2018"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Data structures used by the RLS and Rust compiler"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]

[dependencies]
rls-span = "0.5.0"
serde = "1.0"

[features]
default = ["derive"]
derive = ["serde/derive",  "rls-span/derive"]
