[package]
name = "rls-rustc"
version = "0.6.0"
edition = "2018"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "A simple shim around rustc to allow using save-analysis with a stable toolchain"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]

[dependencies]
env_logger = "0.9"
log = "0.4"
rand = "0.8"
clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", version = "0.1.60", optional = true }
tokio = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rls-data = { version = "0.19", optional = true }
rls-ipc = { path = "../rls-ipc", optional = true }

[features]
clippy = ["clippy_lints"]
ipc = ["tokio", "futures", "serde", "rls-data", "rls-ipc/client"]
default = []
