[package]
name = "rls-span"
version = "0.5.0"
edition = "2018"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Types for identifying code spans/ranges"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]


[dependencies]
serde = "1.0"
serde_derive = { version = "1.0", optional = true }

[features]
default = []
derive = ["serde_derive"]
