[package]
name = "rls-span"
version = "0.5.4"
edition = "2018"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Types for identifying code spans/ranges"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]


[dependencies]
rustc-serialize = { version = "0.3.24", optional = true }
serde = "1.0"

[features]
default = []
nightly = []
serialize-rustc = ["rustc-serialize"]
derive = ["serde/derive"]
