[package]
name = "rls-vfs"
version = "0.7.1"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Virtual File System for the RLS"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rls"
categories = ["development-tools"]
edition = "2018"

[dependencies]
quick-error = "1.2"
rls-span = "0.4"
log = "0.4"
mio = "0.6"
bincode = "1.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
